# tinytga

./: CHANGELOG.md  Cargo.toml  README.md  README.tpl  justfile
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
benches/: draw.rs
doc/: releasing.md
examples/: display.rs
src/: color_map.rs  dynamic_tga.rs  footer.rs  header.rs  lib.rs  parse_error.rs  pixels.rs  raw_iter.rs  raw_pixels.rs  raw_tga.rs
tests/: cbw8.rs  chequerboard-uncompressed-topleft.rs  chessboard_4px_raw.rs  chessboard_4px_rle.rs  chessboard_rle.rs  chessboard_uncompressed.rs  coordinates.rs  embedded_graphics.rs  errors.rs  logo.rs  logo_gray8.raw  logo_type10_16bpp_bl.tga  logo_type10_16bpp_tl.tga  logo_type10_24bpp_bl.tga  logo_type10_24bpp_tl.tga  logo_type11_bl.tga  logo_type11_tl.tga  logo_type1_16bpp_bl.tga  logo_type1_16bpp_tl.tga  logo_type1_24bpp_bl.tga  logo_type1_24bpp_tl.tga  logo_type2_16bpp_bl.tga  logo_type2_16bpp_tl.tga  logo_type2_24bpp_bl.tga  logo_type2_24bpp_br.tga  logo_type2_24bpp_tl.tga  logo_type2_24bpp_tr.tga  logo_type3_bl.tga  logo_type3_tl.tga  logo_type9_16bpp_bl.tga  logo_type9_16bpp_tl.tga  logo_type9_24bpp_bl.tga  logo_type9_24bpp_tl.tga  types.rs  ubw8.rs
