[package]
name = "tinytga"
version = "0.4.0-beta.1"
description = "No-std, low memory footprint TGA image loader"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"
repository = "https://github.com/embedded-graphics/tinytga"
documentation = "https://docs.rs/tinytga"
categories = ["embedded", "no-std", "multimedia::images"]
keywords = ["graphics", "embedded-graphics", "tga", "targa", "image"]
readme = "./README.md"
license = "MIT OR Apache-2.0"
exclude = [
    "/.github/",
    "/.circleci/",
    ".gitignore",
]

[badges]
circle-ci = { repository = "embedded-graphics/tinytga", branch = "master" }

[dependencies]
embedded-graphics = "0.7.0-beta.2"
nom = { version = "6.0.1", default-features = false }

[dev-dependencies]
paste = "1.0"
