[package]
name = "tinytga"
version = "0.4.1"
description = "No-std, low memory footprint TGA image loader"
authors = ["James Waples <james@wapl.es>", "Ralf Fuest <mail@rfuest.de>"]
edition = "2021"
repository = "https://github.com/embedded-graphics/tinytga"
documentation = "https://docs.rs/tinytga"
categories = ["embedded", "no-std", "multimedia::images"]
keywords = ["graphics", "embedded-graphics", "tga", "targa", "image"]
readme = "./README.md"
license = "MIT OR Apache-2.0"
exclude = [
    "/.github/",
    "/.circleci/",
    ".gitignore",
]

[badges]
circle-ci = { repository = "embedded-graphics/tinytga", branch = "master" }

[[bench]]
name = "draw"
harness = false

[dependencies]
embedded-graphics = "0.7.1"
nom = { version = "7.1.1", default-features = false }

[dev-dependencies]
paste = "1.0"
criterion = "0.3.5"
clap = { version = "3.2.22", features = ["derive"] }
embedded-graphics-simulator = "0.4.0"
