[package]
name = "tinytga"
version = "0.5.0"
description = "No-std, low memory footprint TGA image loader"
authors = ["James Waples <james@wapl.es>", "Ralf Fuest <mail@rfuest.de>"]
edition = "2021"
repository = "https://github.com/embedded-graphics/tinytga"
documentation = "https://docs.rs/tinytga"
categories = ["embedded", "no-std", "multimedia::images"]
keywords = ["graphics", "embedded-graphics", "tga", "targa", "image"]
readme = "./README.md"
license = "MIT OR Apache-2.0"
exclude = [
    "/.github/",
    ".gitignore",
]

[[bench]]
name = "draw"
harness = false

[dependencies]
embedded-graphics = "0.8.0"
nom = { version = "7.1.1", default-features = false }

[dev-dependencies]
paste = "1.0"
criterion = "0.3.5"
clap = { version = "3.2.22", features = ["derive"] }
embedded-graphics-simulator = { version = "0.5.0", default-features = false }

[patch.crates-io]
embedded-graphics = { git = "https://github.com/embedded-graphics/embedded-graphics.git" }
embedded-graphics-simulator = { git = "https://github.com/embedded-graphics/simulator.git" }